# src/Generated/Exception/DeleteAuthRoleIdentityCollectionForbiddenException.php
@@ -1,0 +1,17 @@
+<?php
+
+namespace Datenkraft\Backbone\Client\PriceAssessmentApi\Generated\Exception;
+
+class DeleteAuthRoleIdentityCollectionForbiddenException extends ForbiddenException
+{
+    private $errorResponse;
+    public function __construct(\Datenkraft\Backbone\Client\PriceAssessmentApi\Generated\Model\ErrorResponse $errorResponse)
+    {
+        parent::__construct('Forbidden', 403);
+        $this->errorResponse = $errorResponse;
+    }
+    public function getErrorResponse()
+    {
+        return $this->errorResponse;
+    }
+}
